[package]
name = "bibliotheca_rfid_reader"
description = "Library for using Bibliotheca RFID card readers"
authors = ["Michael Wright <maiklpolkovnikov@gmail.com>"]
repository = "https://github.com/michaelwright235/bibliotheca_rfid_reader/"
categories = ["hardware-support"]
keywords = ["usb", "hid"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies.libftd2xx]
version = "0.32.3"
# statically link the vendor library, defaults to dynamic if not set
# this will make things "just work" on Linux and Windows
#features = ["static"]
